fixed dark mode

--- a/src/styles/AlertBox.module.css
+++ b/src/styles/AlertBox.module.css
@@ -1,21 +1,37 @@
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .1);
+  display: grid;
+  place-items: center;
+  z-index: 3;
+  backdrop-filter: blur(5px);
+}
+
 .alert {
   display: flex;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
+  top: 10;
+  right: 10;
   z-index: 3;
-  bottom: 20px;
   margin: auto;
   padding: 15px;
   border-radius: 20px;
   text-align: center;
   opacity: 1;
-  color: var(--color1);
+  color: var(--color11);
+  box-shadow: 0px 5px var(--color2);
   background-color: var(--color6);
 }
 
-#notetitle { font-size: 20px; font-weight: 800; }
-#notemessg { font-size: 16px; }
+#notetitle {
+  font-size: 20px;
+  font-weight: 800;
+}
+
+#notemessg {
+  font-size: 16px;
+}
 
 .alert-success {
   background-color: #4CAF50;
@@ -46,11 +62,10 @@
   font-family: Sniglet;
   font-size: 24px;
   font-weight: 800;
-  top: 0;
-  right: 0;
   padding: 10px 10px 10px 20px;
   color: inherit;
   background-color: transparent;
   border: 0;
   opacity: 0.5;
+  cursor: pointer;
 }
