--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -72,7 +72,7 @@
     border-radius: 20px;
     width: 100%;
     background-color: var(--color1);
-    color: var(--color4);
+    color: var(--color7);
     font-family: Sniglet;
     font-size: 18px;
     font-weight: 800;
