--- a/src/styles/WebCam.module.css
+++ b/src/styles/WebCam.module.css
@@ -13,7 +13,7 @@
   border-radius: 20px;
   box-shadow: 0px 5px var(--color2);
   max-width: 60%;
-  color: var(--color1);
+  color: var(--color11);
   font-family: Sniglet;
   font-size: 16px;
   border: none;
